Поставил drf-yasg, настроил smtp

--- a/.env.pub
+++ b/.env.pub
@@ -13,3 +13,11 @@ DJANGO_DATABASE_USER=
 DJANGO_DATABASE_PASSWORD=
 DJANGO_DATABASE_HOST=
 DJANGO_DATABASE_PORT=
+
+#SMTP
+EMAIL_HOST=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_PORT=
+EMAIL_USE_TLS=
+EMAIL_USE_SSL=
