--- a/.env.pub
+++ b/.env.pub
@@ -7,10 +7,11 @@ DEBUG=True
 
 
 # DATABASE configuration
+# if use postgres -> check docker_files/postgres/init.sql
 DJANGO_DATABASE_ENGINE=
 DJANGO_DATABASE_NAME=
-DJANGO_DATABASE_USER=
-DJANGO_DATABASE_PASSWORD=
+DJANGO_DATABASE_USER=postgres_user
+DJANGO_DATABASE_PASSWORD=postgres_password
 DJANGO_DATABASE_HOST=
 DJANGO_DATABASE_PORT=
 
